# Alphonso-Graphics-Engine

./: .gitignore  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md  build.bat
Assets/Models/: plane.objs
Assets/Shaders/: depthMap.vert  depthMapVert.spv  frag.spv  proxyModel.frag  proxyModel.vert  proxyModelFrag.spv  proxyModelVert.spv  shader.frag  shader.vert  vert.spv
source/: Camera.cpp  Camera.h  DirectionalLight.cpp  DirectionalLight.h  FirstPersonCamera.cpp  FirstPersonCamera.h  GameClock.cpp  GameClock.h  GameTime.cpp  GameTime.h  Light.cpp  Light.h  Projector.cpp  Projector.h  Renderer.cpp  Renderer.h  RendererC.cpp  RendererC.h  imgui_impl_vulkan.cpp  imgui_impl_vulkan.h  main.cpp
